--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
             <div class="pictureright">
-                 <img class="piccircle" src="pic.jpg" alt="famillypic" >
+                 <img class="piccircle" src="" alt="famillypic" >
                 <a onclick="clickme()" class="picturein" href="#">
-                    <img class="picturein"  src="famillypic.jpg" alt="picture" >
+                    <img class="picturein"  src="" alt="picture" >
                 </a> 
                 <a class="largpic" onclick="clickme2()"><img class="familly2" src="famillypic.jpg" alt="" ></a> 
             </div>
             <div class="picture">
-                <img class="picsqure" src="picsqure.jpg" alt="invite">
+                <img class="picsqure" src="" alt="invite">
             </div>
     </div>
         <a href="" onclick="clickme3()"><img class="familly3" src="foodpic.jpg" alt="" ></a> 
